# wpget

./: README.md  pyproject.toml
wpget/: __init__.py  cli.py
