[project]
name = "wpget"
version = "0.1.2"
description = "A tool for downloading all posts from a WordPress website via public JSON API"
authors = [{ name = "Seanghay Yath", email = "seanghay.dev@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }

classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.8',
]

dependencies = ["tqdm", "requests", "fake-useragent"]

[project.urls]
Homepage = "https://pypi.org/project/wpget"
Repository = "https://github.com/seanghay/wpget"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["wpget"]

[project.scripts]
wpget = "wpget.cli:main"
